# music_player

./: .gitignore  CMakeList.txt  CMakeLists.txt  MusicPlayer.exe - 快捷方式.lnk  README.md
src/: conversiondialog.cpp  conversiondialog.h  fleeteffects.cpp  fleeteffects.h  formatconverter.cpp  formatconverter.h  library.cpp  library.h  lyricsdecoder.cpp  lyricsdecoder.h  main.cpp  mainwindow.cpp  mainwindow.h  player.cpp  player.h  playlist.cpp  playlist.h  playlistmanager.cpp  playlistmanager.h  playtrack.cpp  playtrack.h  song.cpp  song.h  style.cpp  style.h  subtitleplayer.cpp  subtitleplayer.h  visualizer.cpp  visualizer.h
